--- a/FinSpot/FinSpotAPI.Infrastructure/FinSpotAPI.Infrastructure.csproj
+++ b/FinSpot/FinSpotAPI.Infrastructure/FinSpotAPI.Infrastructure.csproj
@@ -7,12 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\FinSpotAPI.Common\FinSpotAPI.Common.csproj" />
+    <ProjectReference Include="..\FinSpotAPI.Domain\FinSpotAPI.Domain.csproj" />
   </ItemGroup>
 
 </Project>
